--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react": "~18.2.79",
     "expo": "~51.0.2",
     "expo-image-picker": "~15.0.4",
+    "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.11.1",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "^18.3.1",
     "react-native": "0.74.1",
